# salon-auto-recall-crm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_core.py
data/: sample_customers.csv
examples/: output_report.md  retention_report.md
src/: main.py
src/marketing/: content_generator.py  hashtag_generator.py  social_post_builder.py
templates/: sms_template.md
